# BlockMuon

./: .dockerignore  .gitignore  Dockerfile  README.md
src/: pyproject.toml
src/block_muon/: block_muon_train.py
src/mmlu/: evaluate_checkpoint.py
