[tool.poetry]
name = "block-muon"
version = "0.1.0"
description = ""
authors = ["Alexander Ploskin"]

[tool.poetry.dependencies]
python = "^3.10"
torch = "^2.7.0"
transformers = "^4.52.4"
numpy = "^2.2.6"
loguru = "^0.7.3"
datasets = "^3.6.0"
tqdm = "^4.67.1"
wandb = "^0.19.11"
deepeval = "^3.0.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
